test: keep test code compatible with Java 17