@@ -27,10 +27,10 @@ class MarketShareListTest {
                 .filteredBy("Czech Republic", "2010 Q4");
 
         filtered.sortByVendor();
-        assertEquals("ASUS", filtered.getEntries().getFirst().getVendor());
+        assertEquals("ASUS", filtered.getEntries().get(0).getVendor());
 
         filtered.sortByUnits();
-        assertEquals("Apple", filtered.getEntries().getFirst().getVendor());
+        assertEquals("Apple", filtered.getEntries().get(0).getVendor());
     }
 
     @Test
